   new Luminotes release. This applies to all Luminotes products.
 * Added code to support Luminotes discussion forums.
 * Laid some of the foundational groundwork for future tags support.
 * Made the subscription pricing page a little less confusing by hiding some
   of the bigger plans by default.
 * Increased the limit on characters per note from 25,000 to 50,000.
 * Fixed an occasional bug that caused unexpected logouts. The solution was
   to move the session information into the database where it could be
   properly locked.
 * NOTE: After upgrading to this release, you must restart memcached to clear
   the cache. Failing to do so will cause errors with the Note object. This
   does not apply to Luminotes Desktop.
 * NOTE: After upgrading to this release and starting Luminotes, you can
   optionally convert all existing user sessions with the script
   tools/convert_sessions.py. This is not necessary for Luminotes Desktop.

1.5.4: October 9, 2008
 * Fixed a visual bug in which clicking up or down to reorder your notebooks
   didn't display correctly.

1.5.3: October 9, 2008
 * Safari and Chrome web browsers are now supported (beta):
   * You can now create and end links.
   * Underline and strikethrough now work.
   * Pulldowns for search suggestions, importing, and exporting show up.
   * Pulldowns on inline images are now positioned correctly.
   * Uploading files now works reliably instead of just once.
   * Note resizing (growing and shrinking) works (mostly) as expected.
 * Improved page loading speed and fixed a rare session locking timeout bug
   by removing all implicit session locking.
 * Fixed a bug that broke the Luminotes Desktop product download page if
   PayPal took too long to notify Luminotes of the purchase.

1.5.2: October 1, 2008
 * Leading/trailing spaces in note titles are now ignored when making links
   to such notes. This means that creating a link titled "my note" to a note
   called "my note  " now works properly.